# Lekh

./: .gitignore  CMakeLists.txt  README.md  file-structure.md  run-build.sh
docs/: contribution.md  run.md
include/: main.hpp
src/: frontcode.js  index.html  main.cpp
tests/: CMakeLists.txt  test.cpp
